--- a/Section3_hw02_KierstenH_JillZ_Hoang_DaghanA_v9.Rmd
+++ b/Section3_hw02_KierstenH_JillZ_Hoang_DaghanA_v9.Rmd
@@ -1,45 +1,32 @@
 ---
 title: "W271 Section 3 Lab 2"
 author: "Kiersten Henderson, Jill Zhang, Hoang Phan, Daghan Altas"
-date: "10/8/2017"
+date: "10/22/2017"
 output: pdf_document
 ---
 
 ```{r setup, warning=FALSE, message=FALSE, size="tiny"}
-library(knitr)
-library(vcd)
+library(easypackages)
+packages("knitr","Hmisc","ggplot2","tidyverse","forcats", "gridExtra","reshape", "stargazer", "ordinal","car","plyr")
 opts_chunk$set(tidy.opts=list(width.cutoff=75),tidy=TRUE)
-library(Hmisc)
-library(ggplot2)
-library(dplyr)
-library(GGally)
-library(data.table)
-library(stargazer)
-library(tidyverse)
-library(forcats)
-library(scales)
-library(gridExtra)
-library(reshape)
-library(ordinal)
-library(car)
 ```
 
 #1 Introduction  
 
-Our team of data scientists is working with a University foundation to identify alumni who are likely to donate in the future. We were able to model not just whether alumni with particular characteristics would donate, but rather what level of contribution particular alumni were most likely to make.
+Our team of data scientists is working with a University foundation to identify alumni who are likely to donate in the future. We were able to model not just whether alumni with particular characteristics would donate, but rather what level of contribution particular alumni were most likely to make. In order to evaluate what variables to include when we estimated our model, we considered fundraising domain knowledge and the results of our explanatory data analysis (EDA).
 
-In order to evaluate what variables to include when we estimated our proportional odds model, we considered fundraising domain knowledge and the results of our explanatory data analysis (EDA). Fundraising professionals typically consider an individual's wealth (ability to give) and enthusiasm for giving when they consider who might be the most likely, loyal, and generous donors to a particular cause. For this reason and due to our EDA, we included Class.Year in the model we estimated because it is a proxy for wealth (in our dataset, the alumni who have graduated the longest ago likely have the highest earning potential). Similarly, we included Next.Degree as another potential indicator of wealth (those individuals with graduate degrees frequently have higher incomes). In addition, we grouped majors together according to level of donations typically made by donors from each major. We also considered Enthusiasm for and support of the university which was evident if an alumnus had attended a university event, and also if they had previously donated to their alma matter. For these reasons and due to our EDA, we included Event.Attendence and all previous years donations to the university in our model (FY12Giving-FY16Giving). In addition, we found in our EDA that Gender and Marital.Status played roles in the philanthropic behavior towards the University and we thus included Gender when we estimated our model.
+For several reasons supported by our EDA (below), we modeled donation level as a categorical variable and used a proportional odds model to estimate level of donation as the dependent variable. 
 
-**describe key results of model below**
-
-SUMMARY
-
-For several reasons supported by our EDA, we modeled donation level as a categorical variable and used a proportional odds model to estimate level of donation as the dependent variable. 
+1. We elected to use an Ordinal model as the donation brackets are clearly ordered.
+2. After completing multiple levels of EDA, we found key trends and nuances in the data that we used for modeling
+3. We compared 3 models on their alignment with our EDA, goodness of fit, and logical real-world structure, and ultimately chose a final model that exceled in all three of these aspects.
 
 Our final model is:
 
+# PASTE FINAL MODEL HERE #
 
-We found that....
+This model primarily consists of previous years' donations, as we found they were the best predictors of donating in the current year. Fundraising professionals typically consider an individual's wealth (ability to give) and enthusiasm for giving when they consider who might be the most likely, loyal, and generous donors to a particular cause. For this reason, we included Advanced Degree as a potential indicator of wealth (those individuals with graduate degrees frequently have higher incomes). In addition, we grouped majors together according to level of donations typically made by donors from each major. We also considered enthusiasm for and support of the university which was evident if an alumnus had attended a university event, thus we included Event Attendence as well. In addition, we found in our EDA that Gender and Marital Status contributed to identifying the philanthropic behavior towards the University and we thus included Gender and Marital status when we estimated our model.
+
 
 #2 Exploratory Data Analysis
 
@@ -65,7 +52,7 @@ levels(givings$Gender)  = c("Female", "Male")
 givings$AttendenceEvent = factor(givings$AttendenceEvent, levels = c(0,1), 
                                  labels = c("Didn't Attend", "Attended"))
 levels(givings$Marital.Status) = c("Divorced", "Married", "Single", "Widowed")
-givings$Class.Year = factor(givings$Class.Year)
+givings$Class.Year = as.factor(givings$Class.Year)
 givings$FY12Giving = as.numeric(givings$FY12Giving)
 givings$FY13Giving = as.numeric(givings$FY13Giving)
 givings$FY14Giving = as.numeric(givings$FY14Giving)
@@ -73,7 +60,9 @@ givings$FY15Giving = as.numeric(givings$FY15Giving)
 givings$FY16Giving = as.numeric(givings$FY16Giving)
 ```  
 
+
 In addition, we created a factor variable from FY16Givings as suggested. We did so by grouping FY2016  donations into 5 buckets and we extended this logic to all other fiscal year donations.
+
 ```{r size = 'tiny'}
 givings$FY12Giving.Grouped <- factor(cut(givings$FY12Giving, breaks=c(0,1,100,250,500, 200000), labels=c("[0-1)", "[1-100)", "[100-250)","[250-500)","[500-200000)"), right = FALSE))
 givings$FY13Giving.Grouped <- factor(cut(givings$FY13Giving, breaks=c(0,1,100,250,500, 200000), labels=c("[0-1)", "[1-100)", "[100-250)","[250-500)","[500-200000)"), right = FALSE))
@@ -82,7 +71,9 @@ givings$FY15Giving.Grouped <- factor(cut(givings$FY15Giving, breaks=c(0,1,100,25
 givings$FY16Giving.Grouped <- factor(cut(givings$FY16Giving, breaks=c(0,1,100,250,500, 200000), labels=c("[0-1)", "[1-100)", "[100-250)","[250-500)","[500-200000)"), right = FALSE))
 ```
 
+
 ##2.3 Univariate Data Analysis
+
 
 We conducted univariate analysis of the following variables:
 
@@ -211,11 +202,8 @@ We are examined the relationship between the following sets of variables:
 We note two interesting observations in table 1. First, there are more donations in the [$500-$200K) bracket than the [$250-$500) bracket. Furthermore, at $100 donation level or above, men consistently donate more than women do.
 
 ```{r fig.height= 3}
-t1 <- xtabs(~ Gender + FY16Giving.Grouped , data = givings)
-t1.1 <-round(t1/rowSums(t1),2)
-#kable(list(t1, t1.1), caption = "Frequency vs. Ratio for FY16Giving.Grouped vs. Gender")
-t1
-t1.1
+(t1 <- xtabs(~ Gender + FY16Giving.Grouped , data = givings))
+(t1.1 <-round(t1/rowSums(t1),2))
 ```
 
 
@@ -231,11 +219,8 @@ There are 3 key insights from table 2 below:
 
 
 ```{r}
-t2 <- xtabs(~ Class.Year + FY16Giving.Grouped , data = givings)
-t2.1 <- round(t2/rowSums(t2),2)
-#kable(list(t2,t2.1), caption = "Frequency and Ratio for FY16Giving.Grouped vs. Class.Year")
-t2
-t2.1
+(t2 <- xtabs(~ Class.Year + FY16Giving.Grouped , data = givings))
+(t2.1 <- round(t2/rowSums(t2),2))
 ```
 
 ###2.4.3 FY16Giving.Grouped vs. Marital.Status  
@@ -244,11 +229,8 @@ Married and single people are biggest source of donations when compared to divor
 therefore expect  Marital.Status to be a significant explanatory variable in our final model. However, there are many more married or single individuals compared to divorced or widowed alumni.
 
 ```{r}
-t3 <- xtabs(~ Marital.Status + FY16Giving.Grouped, data = givings)
-t3.1 <- round(t3/rowSums(t3),2)
-#kable(list(t3,t3.1), caption = "Frequency and Ratio for FY16Giving.Grouped vs. Marital.Status")
-t3
-t3.1
+(t3 <- xtabs(~ Marital.Status + FY16Giving.Grouped, data = givings))
+(t3.1 <- round(t3/rowSums(t3),2))
 ```
 
 
@@ -260,8 +242,7 @@ There are 45 majors in the dataset and as mentioned, some majors only have a sin
 
 2. These binary variables will hold most of their records as zero and we have very little information about them.
 
-
-Therefore, we decide to group majors and after considering several ways of doing so, the method we found most appropriate was to group majors by their median donations in the last 4 years (2012-2015). Therefore, we began by calculating the average donation for each person over the last four years, and could then calculate the median donation over the last 4 years for each major. 
+Therefore, we've decided to group majors and after considering several ways of doing so, the method we found most appropriate was to group majors by their median donations in the last 4 years (2012-2015). Therefore, we began by calculating the average donation for each person over the last four years, and could then calculate the median donation over the last 4 years for each major. 
 
 To optimize grouping of majors, we began with very granular cuts in the median donation (5 dollars increases). Importantly, because it is a median value, it is much less extreme than the original donation
 amount (see histogram below). For half of the majors, the median donation is less than 13.75 and only 25%
@@ -285,22 +266,17 @@ Based on this analysis, we classified majors into four donation categories: “N
 givings$Last.4Year.Avg<- rowMeans(givings[c("FY12Giving","FY13Giving","FY14Giving","FY15Giving")])
 Major.Index<-data.frame(aggregate(Last.4Year.Avg ~ Major, data = givings,median))
 ggplot(Major.Index, aes(Last.4Year.Avg))+geom_histogram(bins=30)
-
 givings<-merge(x = givings, y = Major.Index, by = "Major")
-
 givings$Major.Donation.Level<-factor(cut(givings$Last.4Year.Avg.y,
                                          labels = c("NO","Low","Medium","High"),breaks=c(0,1,10,30,200000),  right = FALSE))
 t18 <-xtabs(~Major.Donation.Level+FY16Giving.Grouped, data=givings)
 round(t18/rowSums(t18),2)
-
-givings$High.Donor.Major <- ifelse(givings$Major %in% c("History","Psychology","Biology", "Economics"),TRUE,FALSE)
 ```
 
 
 ###2.4.5 FY16Giving.Grouped vs. Next.Degree
 
 A higher proportion of people with above_bachelor degree make top donations ($500 or more), compared to other groups.
-
 
 ```{r}
 t12<-xtabs(~Adv.Deg+FY16Giving.Grouped, data= givings)
@@ -329,13 +305,11 @@ Considering the high correlation between the previous years' donation level and 
 
 The following plot shows the effect of 2015 donations and 2014 donations on 2016 donations. The x-axis is 2015 donations. The color shows 2014 donation while the line type shows 2016 donations (different donation levels). The contingency table shows the same information. For example, the actual probability that 2016 donation locates in [0,1) is 0.9 if the alumni neither donated in 2014 nor in 2015. This percentage decreased to 0.6 if this person donated in 2014 even if he didn't donate in 2015. The situation is similar for other year combinations. From both the plot and the contingency table, it seems we should include all of the previous years while estimating our model because every year does provide additional information to make our prediction.
 
-**add jill's graph - added - must check if it is what was intended**
-
 ```{r}
 FY_analysis <- function(x,y){
 groups<-aggregate(givings$FY16Giving.Grouped, by=list(givings[,x],givings[,y],givings$FY16Giving.Grouped),"length")
 colnames(groups)<-c("x","y","FY16Giving.Grouped","cnt")
-#head(groups15_14)
+
 groups_cast<-cast(groups,x+y ~ FY16Giving.Grouped,value = 'cnt')
 
 colnames(groups_cast)[c(1,2)]<-c("x","y")
@@ -347,7 +321,6 @@ melt_output<-melt(output,id=c("x","y"))
 levels(melt_output[,1])<- c(0,1,100,250,500)
 melt_output[,1]<-as.numeric(levels(melt_output[,1]))[melt_output[,1]]
 
-
 ggplot(melt_output, aes(x,value,colour=y,linetype=variable))+geom_line(lwd=1)+theme_bw()+ggtitle(paste("FY15Giving.Grouped"," vs ","FY14Giving.Grouped"))+ylab("Actual probability")+scale_linetype_manual(values=c("solid","twodash","longdash","12345678","dotted"))+scale_color_manual(values=c("red","orange","blue","green","purple"))+guides(color=guide_legend(title="FY16Giving.Grouped"),linetype=guide_legend(title="FY16Giving.Grouped"))
 
 
@@ -358,10 +331,10 @@ head(cbind(output[,1:2],round(output[,3:7],2)),4)
 
 
 ```{r}
-xtabs(~ FY16Giving.Grouped + FY12Giving.Grouped, data = givings)
-xtabs(~ FY16Giving.Grouped + FY13Giving.Grouped, data = givings)
-xtabs(~ FY16Giving.Grouped + FY14Giving.Grouped, data = givings)
-xtabs(~ FY16Giving.Grouped + FY15Giving.Grouped, data = givings)
+#xtabs(~ FY16Giving.Grouped + FY12Giving.Grouped, data = givings)
+#xtabs(~ FY16Giving.Grouped + FY13Giving.Grouped, data = givings)
+#xtabs(~ FY16Giving.Grouped + FY14Giving.Grouped, data = givings)
+#xtabs(~ FY16Giving.Grouped + FY15Giving.Grouped, data = givings)
 ```
 
 
@@ -378,12 +351,13 @@ t(round(t6/rowSums(t6),2))
 
 ###2.4.9 Gender vs. Marital.Status
 
-We previously observed that that Married and Single alumni were more likely to donate than divorced or widowed alumni, however, the vast majority of sample consists of Married and Single alumni. We anticipate that this will weaken the predictive power of the Marital.Status variable. We note here that strong skew in widow ratio can be explained by the life expectancy differences between men and women.
+We previously observed that that Married and Single alumni were more likely to donate than divorced or widowed alumni, however, the vast majority of sample consists of Married and Single alumni. We anticipate that this will weaken the predictive power of the Marital.Status variable. We will create a simpler variable (Married? yes or no) to improve the parsimony of the final model. We also note here that strong skew in widow ratio can be explained by the life expectancy differences between men and women.
 
 ```{r}
 t7 <- xtabs(~ Marital.Status + Gender, data = givings)
 t(t7)
 t(round(t7/rowSums(t7),2))
+givings$Married <- factor(ifelse(givings$Marital.Status == "Married", TRUE,FALSE))
 ```
 
 
@@ -402,15 +376,17 @@ t(round(t8/rowSums(t8),2))
 ```
 
 
-###2.4.11 Major vs. Next.Degree
+###2.4.11 Major vs. Next.Degree (Adv.Deg)
+```{r}
+t99 <- xtabs(~ Major.Donation.Level + Adv.Deg, data = givings)
+t(t99)
+t(round(t99/rowSums(t99),2))
+```
 
-skipping for now
+We examined the distribution of alumni with or without next degrees based on the donation level of their major. We found that alumni who did majors characterized by high donation levels most frequently either did not have a second degree, or had a next degree that was above the bachelors level. Surprisingly, alumni who did a second bachelor's degree were the least likely to give at any donation level.
 
-###2.4.12 Major vs. AttendenceEvent
-
-skipping for now
-
-
+###2.4.12 Major vs. AttendenceEvent 
+Based on our segmentation of each Major's donation level, we find that there is a linear trend between Attendance and Major Donation Level, namely that as the donation level increased, so did the percentage of event attendees. This is not surprising considering we saw earlier that Attendance is correlated with donation level.
 ```{r}
 t9 <- xtabs(~ Major.Donation.Level + AttendenceEvent, data = givings)
 t(t9)
@@ -434,15 +410,14 @@ t(round(t10/rowSums(t10),2))
 ### 2.5.1 Gender, Class.Year, 2016 Donations
 
 ```{r}
-t11 <- xtabs(~ Class.Year + FY16Giving.Grouped + Gender, data = givings)
-t11
+xtabs(~ Class.Year + FY16Giving.Grouped + Gender, data = givings)
+
 ```
 The difference in top donations (above $500) can be explained by male / female ratio. For example, 6 women made $500+ donations from the class of 72, vs. 10 man. However, their ratio (6/10) is not too far from the female/male ratio (0.56) for the class of FY72. We are not anticipating a strong interaction between Gender, Class.Year, and 2016 Donation levels.  
 
 ### 2.5.2 Gender, Major, 2016 donations
 ```{r}
-t11 <- xtabs(~ Major.Donation.Level + FY16Giving.Grouped + Gender, data = givings)
-t11
+xtabs(~ Major.Donation.Level + FY16Giving.Grouped + Gender, data = givings)
 ```
 
 Looking at the top donors from Majors that have usually high donation levels, we see that they are more likely to be male. We know that top donor Majors (Major.Donation.Level == High) have a 3-to-1 Male/Female ratio. But we observe a 7-to-0 ration for Male/Female distribution for donors who have donated above $500 and are from top donor majors. **So we we believe there may be an interaction between Gender, Major, 2016 donations**
@@ -459,8 +434,6 @@ you perform? Explain them. Comment on statistical significance vs. economic sign
 
 -list variables included
 
--latex final model
-
 
 a) Our prefered model is:
 
@@ -475,14 +448,6 @@ $$ logit(\hat P(Y \leq j)) = 0.000 -0.000\ age + i'm finishing this now $$
 -statistical inference we performed
 
 -stats significance versus economic significance
-
-I don't know what to do with this refactoring of variables below - somehow justify using them in univariate analysis?
-
-```{r}
-givings$Married <- factor(ifelse(givings$Marital.Status == "Married", TRUE,FALSE))
-givings$Class.Year = as.numeric(givings$Class.Year)
-
-```
 
 Based on our exploratory data analysis we decided to include most of the variables provided in the dataset as explanatory variables while estimating our model. These included all years of FYGiving.Grouped (2012-2015), our categorical variable of Married, AttendenceEvent, Major.Donation.Level, Adv.Deg,Gender, and as described below we originally included Class.Year, but removed it from the model due to poor model fit.
 
@@ -502,8 +467,8 @@ Wald Tests).
 
 ```{r}
 #our original model based on including all variables that seemed related to FY16Giving.Grouped in EDA
-model_B1g <- clm(formula = FY16Giving.Grouped~Class.Year + Married + AttendenceEvent + FY15Giving.Grouped + Major.Donation.Level + Adv.Deg+Gender+FY14Giving.Grouped + FY13Giving.Grouped + FY12Giving.Grouped,data =givings, link ="logit")
-Anova(model_B1g)
+model_B1g <- clm(formula = FY16Giving.Grouped ~ Class.Year + Married + AttendenceEvent + FY15Giving.Grouped + Major.Donation.Level + Adv.Deg+Gender+FY14Giving.Grouped + FY13Giving.Grouped + FY12Giving.Grouped,data =givings, link ="logit")
+#Anova(model_B1g)
 anova(model_B1a, model_B1g)
 ```
 
@@ -520,7 +485,9 @@ By comparing the FY15Giving.Grouped-only model (model1.Ho) to the model with all
 
 Because there is good evidence that our addition of 9 explanatory variables (model.Ha) to our base model (model.Ho) made a singificant contribution to the model, and because the AIC decreased when we added the explanatory variables as suggested by our EDA (model.Ho = 1705.7, model.Ha = 1560.5), we proceeded with evaluating model fit.
 
-We found that .....JILL JILL JILL.....
+We are aware of the strong correlation between donation levels from 2012 to 2016. However, we've decided to keep them as well for two reasons: 1. They are contributing to the model prediction significnatly(shown by the ANOVA test). 2 The predicted coefficient looks consistent with our observation in EDA. 3 Although a lot of categorie variables are not signficant in Wald test because of inflated standard error, it doesn't necessary negatively the final prediction.
+
+We found that the Class.Year is neither significant in the model nor reports a correct coefficient. On the top of that, in our EDA it is clear that earlier (specially for 1972) graduates is more likely to donate high while the coefficient is showing the opposite, which is very misleading for our model interpretation. The reason for the problem is that Class.Year highly correlated with all the previous donation variable, which increases the standard error (leading to unsignficant test) and incorrect coefficient. Finally we find it may necessarily to keep Class.Year in this model since it is strongly correlated with all previous donation levels and doesn't provide additional information(the model with or without this variable is not significantly different from each other).
 
 Considering the poor fit of model.Ha, we removed Class.Year and re-evaluated the model we estimated with the remaining explanatory variables.
 
@@ -530,63 +497,10 @@ $\beta_{Married}=\beta_{AttendenceEvent}=\beta_{Major.Donation.Level}=\beta_{Adv
 
 ```{r}
 #remove Class.Year as including it causes poor predictions due to high collinearity with FYGiving.Grouped variables
-model_B1j <- clm(formula = FY16Giving.Grouped~Married + AttendenceEvent+FY15Giving.Grouped+Major.Donation.Level+Adv.Deg+Gender+FY14Giving.Grouped+FY13Giving.Grouped+FY12Giving.Grouped,data =givings, link ="logit")
+model_B1j <- clm(formula = FY16Giving.Grouped ~ Married + AttendenceEvent + FY15Giving.Grouped + Major.Donation.Level+Adv.Deg+Gender+FY14Giving.Grouped+FY13Giving.Grouped+FY12Giving.Grouped,data =givings, link ="logit")
 summary(model_B1j)
 Anova(model_B1j)
 anova(model_B1j,model_B1a)
-```
-
-
-```{r}
-model_B1a <- clm(formula= FY16Giving.Grouped ~ FY15Giving.Grouped, data = givings, link="logit")
-Anova(model_B1a)
-#add gender
-model_B1b <- clm(formula= FY16Giving.Grouped ~ FY15Giving.Grouped+Class.Year, data = givings, link="logit")
-Anova(model_B1b)
-anova(model_B1a,model_B1b)
-#add marital status
-model_B1c <- clm(formula= FY16Giving.Grouped ~ FY15Giving.Grouped+Marital.Status, data = givings, link="logit")
-Anova(model_B1c)
-anova(model_B1a,model_B1c)
-#add attend event
-model_B1d <- clm(formula= FY16Giving.Grouped ~ FY15Giving.Grouped+AttendenceEvent, data = givings, link="logit")
-Anova(model_B1d)
-anova(model_B1a,model_B1d)
-#add major
-model_B1e <- clm(formula= FY16Giving.Grouped ~ FY15Giving.Grouped + Major.Donation.Level, data = givings, link="logit")
-Anova(model_B1e)
-anova(model_B1a,model_B1e)
-#add advance degree
-model_B1x <- clm(formula= FY16Giving.Grouped ~ FY15Giving.Grouped + Adv.Deg, data = givings, link="logit")
-Anova(model_B1x)
-anova(model_B1a,model_B1x)
-#add gender
-model_B1y <- clm(formula= FY16Giving.Grouped ~ FY15Giving.Grouped + Gender, data = givings, link="logit")
-Anova(model_B1y)
-anova(model_B1a,model_B1y)
-#add all above variables but not previous years' donation
-model_B1f <- clm(formula = FY16Giving.Grouped~Class.Year +Marital.Status + AttendenceEvent+FY15Giving.Grouped+Major.Donation.Level+Adv.Deg+Gender,data =givings, link ="logit")
-Anova(model_B1f)
-anova(model_B1a,model_B1f)
-#add previous years' donation
-model_B1h <- clm(formula = FY16Giving.Grouped~FY15Giving.Grouped+FY14Giving.Grouped+FY13Giving.Grouped+FY12Giving.Grouped,data =givings, link ="logit")
-Anova(model_B1h)
-anova(model_B1a,model_B1h)
-#add all variables
-model_B1g <- clm(formula = FY16Giving.Grouped~Class.Year +Marital.Status + AttendenceEvent+FY15Giving.Grouped+Major.Donation.Level+Adv.Deg+Gender+FY14Giving.Grouped+FY13Giving.Grouped+FY12Giving.Grouped,data =givings, link ="logit")
-Anova(model_B1g)
-anova(model_B1h,model_B1g)
-
-#add all variables
-model_B1j <- clm(formula = FY16Giving.Grouped~Married + AttendenceEvent+FY15Giving.Grouped+Major.Donation.Level+Adv.Deg+Gender+FY14Giving.Grouped+FY13Giving.Grouped+FY12Giving.Grouped,data =givings, link ="logit")
-summary(model_B1j)
-Anova(model_B1j)
-anova(model_B1j,model_B1g)
-```
-
-
-```{r}
-
 ```
 
 
@@ -662,7 +576,7 @@ where $\hat{beta}_{10} = 2.73, \hat{beta}_{20} = 4.38, \hat{beta}_{30} = 6.82, \
 To fit the model, we use the model using the $clm$ function below:
 
 ```{r}
-model_B1j <- clm(formula = FY16Giving.Grouped ~ Married + Adv.Deg + Gender + AttendenceEvent + High.Donor.Major + FY15Giving.Grouped + FY14Giving.Grouped +FY13Giving.Grouped + FY12Giving.Grouped, data =givings, link ="logit")
+#model_B1j <- clm(formula = FY16Giving.Grouped ~ Married + Adv.Deg + Gender + AttendenceEvent  + FY15Giving.Grouped + FY14Giving.Grouped +FY13Giving.Grouped + FY12Giving.Grouped, data =givings, link ="logit")
 ```
 
 # INDEPENDENCE
@@ -683,18 +597,11 @@ Anova(model_B1j)
 We derive the confidence intervals for the Odds Ratios to determine the significance and impact of the variables within our model:
 
 ```{r}
-## model_polr = polr(formula = FY16Giving.Grouped ~ Married + Adv.Deg + Gender + AttendenceEvent + High.Donor.Major + FY15Giving.Grouped + FY14Giving.Grouped +FY13Giving.Grouped + FY12Giving.Grouped, data =givings, method ="logistic")
-
-## conf.beta = confint(object = model_polr, level = 0.95)
-## ci.ord = exp(conf.beta) # inverted coefficients to assess responses at or ABOVE a certain level
-## round(data.frame(low = ci.ord[,2], up = ci.ord[,1]), 2)
-
 conf.beta <- confint(object = model_B1j , level = 0.95)
 conf.beta <- as.data.frame.matrix(conf.beta)
-conf.beta[,3]<-model_B1j$coefficients[5:26];colnames(conf.beta)[3] = "estimated"
+conf.beta[,3]<-model_B1j$coefficients[5:28];colnames(conf.beta)[3] = "estimated"
 round(conf.beta,2)
 round(exp(conf.beta),2)
-
 ```
 
 The table above details the range of Odds Ratios for any given variable compared with its base, holding all other variables constant. For example, with 95% confidence* the odds of an alumni donating above a given donation bracket is .72 to 1.36 times when they are married than when they are not. The most notable trend is among the previous Fiscal Year donations, as there are increasing Odds for a donation for alumni who donated in higher donation brackets in previous years. Specifically, we see that if an alumni donated in the highest bracket (500-200000) in FY15, his/her odds of donating above a given bracket are 39 to 417 times compared to if he/she did not donate in FY15. This trend holds true for all previous Fiscal Years, although to a lesser extent the less recent the donation year.
@@ -709,6 +616,45 @@ A few addition variable interpretations:
 We notice that many of the variables include 1 within the 95% confidence interval. This suggests that there is not sufficient evidence to indicate that these variables increase the odds of donating. However, through our EDA and logical assessment, many of these variables can be key contributers and also add information to other variables in the model, thus we chose to keep them.
 
 *95% confidence is defined in the frequentist perspective, meaning given 100 samples drawn from the same population, we can expect 95 of the samples to have a 95% confidence interval that contains the true population parameter.
+
+#MODEL FIT
+
+```{r}
+#explanatory variables
+var.list <- c("Married","AttendenceEvent","FY15Giving.Grouped","Major.Donation.Level","Adv.Deg","Gender","FY14Giving.Grouped","FY13Giving.Grouped","FY12Giving.Grouped")
+pred.list<-c("[0-1)","[1-100)","[100-250)","[250-500)","[500-200000)" )
+newData <- unique(givings[,var.list])
+predicts<-cbind(newData, predict(model_B1j, newdata=newData)$fit)
+
+predicts<- merge(predicts,givings,by=var.list)
+FY15.pred.mean <- ddply(predicts, "FY15Giving.Grouped", function(x) colMeans(x[pred.list]))
+FY15.pred.mean <- cbind(FY15.pred.mean[,1],FY15.pred.mean[,2:6]/rowSums(FY15.pred.mean[,2:6]))
+colnames(FY15.pred.mean)[1]<-"FY15Giving.Grouped"
+FY15.actual<-xtabs(~FY15Giving.Grouped+FY16Giving.Grouped,givings)
+FY15.actual<-as.data.frame.matrix(FY15.actual/rowSums(FY15.actual))
+FY15.actual<-FY_actual("FY15Giving.Grouped")
+
+melt.method<- function(df,x,type){
+melt_predicts<-melt(df,id=x)
+melt_predicts$type<-type
+levels(melt_predicts[,1])<- c(0,1,100,250,500)
+melt_predicts[,1]<-as.numeric(levels(melt_predicts[,1]))[melt_predicts[,1]]
+return(melt_predicts)
+}
+FY15.actual<- melt.method(FY15.actual,"FY15Giving.Grouped","actual")
+FY15.pred.mean<- melt.method(FY15.pred.mean,"FY15Giving.Grouped","predicted")
+FY15.all<-rbind(FY15.actual,FY15.pred.mean)
+plots3<-list()
+plots3[[1]]<-ggplot(FY15.all[FY15.all$variable %in% c("[0-1)","[500-200000)"),], aes(FY15Giving.Grouped,value,colour=type,linetype=variable))+geom_line(lwd=1.5)+theme_bw()+ggtitle(paste("Predicted"," vs ","actual"))+ylab("probability")
+
+plots3[[2]]<-ggplot(FY15.all[FY15.all$variable %in% c("[1-100)","[100-250)","[250-500)"),], aes(FY15Giving.Grouped,value,colour=type,linetype=variable))+geom_line(lwd=1.5)+theme_bw()+ggtitle(paste("Predicted"," vs ","actual"))+ylab("probability")
+```
+
+
+```{r fig.width=15, fig.height=6, echo=FALSE}
+plot_grid(plots3[[1]],plots3[[2]],ncol = 2)
+```
+
 
 
 ##4 Final Remarks
